with sequenced collection